# T-spin-Helper

./: .gitignore  CMakeLists.txt  README.md
include/: Board.h  Game.h  GameObject.h  Map.h  PieceBox.h  TextureManager.h
src/: Board.cpp  Game.cpp  GameObject.cpp  Map.cpp  PieceBox.cpp  TextureManager.cpp  main.cpp
test/: main_test.cpp
